Bullets now actually killed on impact

--- a/index.html
+++ b/index.html
@@ -14,4 +14,26 @@
 <canvas id="canvas"></canvas>
 </body>
 <script src="/static/game.js"></script>
+<table>
+  <tr>
+    <td>LEFT</td>
+    <td>A</td>
+  </tr>
+  <tr>
+    <td>RIGHT</td>
+    <td>D</td>
+  </tr>
+  <tr>
+    <td>UP</td>
+    <td>W</td>
+  </tr>
+  <tr>
+    <td>DOWN</td>
+    <td>S</td>
+  </tr>
+  <tr>
+    <td>FIRE</td>
+    <td>LEFT-CLICK</td>
+  </tr>
+</table>
 </html>
