--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>A Multiplayer Game</title>
+  <title>Shooting</title>
   <style>
     canvas {
       width: 800px;
@@ -14,6 +14,7 @@
 <canvas id="canvas"></canvas>
 </body>
 <script src="/static/game.js"></script>
+<div class="js-leaderboard"></div>
 <table>
   <tr>
     <td>LEFT</td>
